-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10
-
None
-
8
-
15cef4fd1 (dev), 20a543c1d (6.10), 607ab4ea1 (6.9), 42259e5f6 (tqtc/lts-6.8)
-
Foundation Sprint 137
Currently, if TLS or QLocalSocket is explicitly requested but
unavailable, we fall back to TCP. This is not a safe approach.
We should assert on that condition and use qCFatal to indicate the
mismatch instead of silently falling back to another transport.
Given the security aspects of it, this strengthens guarantees by
ensuring the requested transport is actually used.