QGrpcHttp2Channel: Guarantee transportation scheme

Currently, if TLS or QLocalSocket is explicitly requested but
unavailable, we fall back to TCP. This is not a safe approach.

This patch asserts on that condition and uses qCFatal to indicate the
mismatch instead of silently falling back to another transport.

Given the security aspects of this file, this strengthens guarantees by
ensuring the requested transport is actually used.

Also: Make construction initialization friendly!

Separated concerns by splitting the large constructor into smaller
segments, achieving the same result through helper functions in the
initializer list.

Added a SocketType enum to clearly identify the transport method. Since
m_isLocalSocket was already removed, this provides more detail without
increasing storage.

[ChangeLog][QGrpcHttp2Channel][Important Behavior Changes]
Requesting TLS or QLocalSocket now fails with a fatal error if the
requested transport is unavailable.

Fixes: QTBUG-139597
Pick-to: 6.8
Change-Id: I2914d8a5764436d08b4502aa7d8cf6c4fdeb60d0
Reviewed-by: Alexey Edelev <alexey.edelev@qt.io>
(cherry picked from commit 15cef4fd1478285d4545b4a114a8d561fb4ea342)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 20a543c1dd79fc7853e023d35e704e7df9b7c145)